node/overseer/overseer-gen/tests/ui/err-02-enum.stderr
error: expected `struct`
  --> $DIR/err-02-enum.rs:16:1
   |
16 | enum Overseer {
   | ^^^^

error[E0433]: failed to resolve: use of undeclared type `Overseer`
  --> $DIR/err-02-enum.rs:27:17
   |
27 |     let overseer = Overseer::<_,_>::builder()
   |                    ^^^^^^^^ use of undeclared type `Overseer`
